--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,16 @@
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
+
+
+
+
+
     </dependencies>
 
     <build>
