--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+logging.level.root=DEBUG
+
+openai.model=gpt-3.5-turbo
+openai.api.key=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
+openai.api.url=https://api.openai.com/v1/chat/completions
+
+openai.max-completions=1
+openai.temperature=0.0
+openai.max_tokens=100
 
